--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,7 @@ header {
     left: 0;
     width: 100%;
     padding: 10px 50px;
-    background: blue;
+    background: skyblue;
     display: flex;
     justify-content: space-between;
     align-items: center;
